🚑HOTFIX refactor(Quiz): 정답값 boolean -> int